RESOLVED FIXED63880
Evaluation order of conversions of operands to >, >= incorrect.
https://bugs.webkit.org/show_bug.cgi?id=63880
Summary Evaluation order of conversions of operands to >, >= incorrect.
Gavin Barraclough
Reported 2011-07-03 16:31:18 PDT
We handle all >, >= comparisons as a commuted < or <= respectively. This is incorrect with respect to evaluation order of calls to ToPrimitive conversions.
Attachments
The code changes, will need updated layout test results. (14.99 KB, patch)
2011-07-04 18:59 PDT, Gavin Barraclough
no flags
The patch with updated Layout test results (21.79 KB, patch)
2011-07-04 20:16 PDT, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2011-07-04 18:59:15 PDT
Created attachment 99664 [details] The code changes, will need updated layout test results.
Gavin Barraclough
Comment 2 2011-07-04 20:16:19 PDT
Created attachment 99667 [details] The patch with updated Layout test results
Gavin Barraclough
Comment 3 2011-07-04 20:18:11 PDT
The attached patch checks in a failing result for one sputnik test; the test is incorrect, more details in the ChangeLog. (For other sputnik tests we have expected failures checked in; at some point we should remove the sputnik & ietestcenter suites & replace with a copy of test-262, license permitting).
Gavin Barraclough
Comment 4 2011-07-05 12:02:15 PDT
Fixed in r90401
Eric Seidel (no email)
Comment 5 2011-07-05 23:04:10 PDT
Either this, or https://bugs.webkit.org/show_bug.cgi?id=63947 appears to have broken all JSC builds other than Snow Leopard. At least Leopard, Win and Qt are crashing all tests.
Note You need to log in before you can comment on or make changes to this bug.